--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,6 +1,9 @@
+@import 'https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400,500,600';
+
 body {
-    padding: 50px;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    font: 11pt "Roboto Condensed", sans-serif;
+    font-weight: 300;
+    height: 100%;
 }
 
 a {
@@ -20,4 +23,27 @@ h1 {
 form.login {
     width: 40%;
     margin: auto;
+}
+
+
+/* MENU */
+
+div.menu {
+    background-color: #2b669a;
+    min-height: 100%;
+    color: #ffffff;
+}
+
+div.submenu {
+    font-size: 12pt;
+}
+div.submenu span.glyphicon {
+    font-size: 11pt;
+}
+
+div.submenu p::before {
+    content: "» ";
+}
+
+div.menu h1 {
 }
