--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,6 @@
-extends layout.pug
+extends menu.pug
 
-block content
-    div.row
-        div.col-md-12
-            h1 Administration
-            p Accueil
+block admin
+    div.col-md-9
+        h1 Administration
+        p Accueil
