--- a/views/login.pug
+++ b/views/login.pug
@@ -5,9 +5,9 @@ block content
         div.col-md-12
             h1 Administration
             form.login(method="post", action="/admin/login", id="loginForm")
-                if error
+                if errorMsg
                     div.alert.alert-danger(id="error", role="alert")
-                        p= errpr
+                        p= errorMsg
                 div.form-group
                     label Username
                     input.form-control(id="username", type="text", name="username", placeholder="Enter your username")
